updated all the things and removed tests as they would make more sense in the espresso world