@@ -1,26 +1,23 @@
-apply plugin: 'com.android.application'
-apply plugin: 'robolectric'
-apply plugin: 'hugo'
-
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
-
     dependencies {
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.14.1'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     }
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.hugo'
+
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.romainpiel.darktown"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -30,27 +27,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        androidTest.setRoot('src/test')
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-}
-
-robolectric {
-    maxHeapSize = '1024m'
-    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.jakewharton:butterknife:6.0.0'
 
-    androidTestCompile 'junit:junit:4.11'
-    androidTestCompile 'org.robolectric:robolectric:2.4'
-    androidTestCompile 'com.squareup:fest-android:1.0.8'
-    androidTestCompile 'org.mockito:mockito-all:1.9.5'
+    final androidSupportVersion = '23.1.1'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:appcompat-v7:${androidSupportVersion}"
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    testCompile 'junit:junit:4.12'
 }
